--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "drupal/core-composer-scaffold": "^9.5",
         "drupal/core-project-message": "^9.5",
         "drupal/core-recommended": "^9.5",
+        "drupal/pathauto": "^1.11",
         "drush/drush": "^11.5"
     },
     "conflict": {
