Add link to config page

--- a/web/modules/as_module/as_module.info.yml
+++ b/web/modules/as_module/as_module.info.yml
@@ -3,3 +3,4 @@ type: module
 description: First module on Drupal 9, created by Drush
 package: Andrew
 core_version_requirement: ^9 || ^10
+configure: as_module.settings_form
