--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "drupal/admin_toolbar": "^3.3",
         "drupal/core-composer-scaffold": "^9.5",
         "drupal/core-project-message": "^9.5",
-        "drupal/core-recommended": "^9.5",
+        "drupal/core-recommended": "^9.5.8",
         "drupal/pathauto": "^1.11",
         "drush/drush": "^11.5"
     },
@@ -33,7 +33,8 @@
             "composer/installers": true,
             "drupal/core-composer-scaffold": true,
             "drupal/core-project-message": true,
-            "dealerdirect/phpcodesniffer-composer-installer": true
+            "dealerdirect/phpcodesniffer-composer-installer": true,
+            "phpstan/extension-installer": true
         },
         "sort-packages": true
     },
