--- a/.lando.yml
+++ b/.lando.yml
@@ -14,7 +14,7 @@ config:
   tooling:
     drush:
       service: appserver
-      cmd: drush --root=/app/docroot -l my-first-drupal9-app.lndo.site
+      cmd: drush --root=/app/web -l my-first-drupal9-app.lndo.site
 services:
   appserver:
     composer_version: 1.10.22 # Change this if the site uses a specific version
@@ -35,4 +35,4 @@ proxy:
 events:
   post-db-import:
     - echo "Clearing site cache."
-    - appserver: cd /app/docroot && drush cr > /dev/null
+    - appserver: cd /app/web && drush cr > /dev/null
